
3.52  2012-10-25
  - Improved documentation.
  - Improved tests.

3.51  2012-10-23
  - Improved documentation.
  - Improved tests.
  - Fixed multiple small context bugs.

3.50  2012-10-20
  - Improved option handling of all commands.

3.49  2012-10-19
  - Improved documentation.
  - Improved tests.
  - Fixed % escaping bug in Mojo::Parameters. (dmw397)

3.48  2012-10-16
  - Improved Mojo::Content performance slightly.
  - Improved documentation.
  - Fixed memory leak in Mojo::Headers.

3.47  2012-10-13
  - Added all method to Mojo::UserAgent::CookieJar.
  - Improved documentation.
  - Fixed WebSocket bug in Mojo::Content.

3.46  2012-10-11
  - Improved router and renderer to allow camel case controllers.
  - Improved documentation.

3.45  2012-10-10
  - Added multi_accept attribute to Mojo::IOLoop.
  - Added multi_accept attribute to Mojo::IOLoop::Server.
  - Added multi_accept setting to Hypnotoad.
  - Relaxed comment handling in Mojo::DOM::HTML a little. (jberger)
  - Improved accept performance of all built-in web servers significantly.
  - Improved responsiveness of documentation browser.
  - Improved documentation browser CSS. (tempire)
  - Improved documentation.
  - Improved tests.

3.44  2012-09-29
  - Improved html_escape to favor lower case entities. (judofyr)
  - Improved javascript and stylesheet helpers to not generate type
    attributes.
  - Improved documentation.
  - Improved tests.

3.43  2012-09-22
  - Updated jQuery to version 1.8.2.
  - Improved Hypnotoad to clean up old PID files containing a 0.
    (coffeemonster)
  - Improved documentation.

3.42  2012-09-16
  - Improved Hypnotoad to clean up old PID files.
  - Improved documentation.
  - Improved tests.

3.41  2012-09-13
  - Improved Mojo::EventEmitter to warn about failed error events.
  - Improved resilience of Mojo::IOLoop exception handling.
  - Improved tests.
  - Fixed small CGI bug.

3.40  2012-09-11
  - Improved tests.
  - Fixed Perl 5.10.1 compatibility.